# candle

./: Cargo.toml
candle-core/: Cargo.toml
candle-core/src/: custom_op.rs  device.rs  display.rs  dummy_vulkan_backend.rs  error.rs  lib.rs  storage.rs  tensor.rs  test_utils.rs  utils.rs  vulkan_backend.rs
candle-core/src/quantized/: dummy_vulkan.rs  ggml_file.rs  mod.rs  vulkan.rs
candle-core/src/vulkan_backend/: device.rs  mod.rs  storage.rs
candle-core/tests/: conv_tests.rs  grad_tests.rs  layout_tests.rs  matmul_tests.rs  pool_tests.rs  quantized_tests.rs  tensor_tests.rs
candle-examples/: Cargo.toml
candle-examples/src/: lib.rs
candle-nn/: Cargo.toml
candle-nn/tests/: ops.rs
candle-pyo3/src/: lib.rs
candle-vulkan-kernels/: Cargo.toml  README.md
candle-vulkan-kernels/src/: lib.rs  random.comp
