[package]
name = "candle-vulkan-kernels"
version = "0.8.2"
edition = "2021"

description = "Vulkan kernels for Candle"
repository = "https://github.com/huggingface/candle"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"

[dependencies]
vulkano = "0.34.1"
